--- a/gb/23/1/5/n13900016.md
+++ b/gb/23/1/5/n13900016.md
@@ -26,41 +26,41 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/16/n13886131.md#1">组图：北约于保加利亚举行联合军事演习</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898570.md#1">北约卸任秘书长访台 关注台海安全</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899248.md#1">前北约秘书长会蔡英文 吁台欧加强合作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900008.md#1">台海危机 美智库连3年列全球最高风险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13899983.md#1">台美签署合约 助空军P-3C技术升级</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899339.md#1">国发会2030减碳目标 学者：欠缺具体技术评估</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899333.md#1">烟害防制法协商卡关 医提1项后果须政府承担</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899297.md#1">台警监系统用陆制品？ 中科院：仅被动元件无涉国安</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899286.md#1">遏阻酒驾 高市府推代驾服务</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964470.md#1">中俄玩不起冷战 专家：2025年可能就有结果</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964454.md#1">台防缺药中心整合5平台 中药通报最快4月上路</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964472.md#1">中俄结盟 学者：国际恐走向全景式新冷战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964409.md#1">十年出现一次金融危机？学者探究根本原因</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964413.md#1">TikTok危害青少年 台教师：学生表现呈两极化</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963902.md#1">四架共军直升机扰台 专家推估两原因</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/12/n10556515.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/6/n10834201.md#1" target="_blank">这些原中共基层官员对李洪志大师的感恩</a></li>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/22/n10077365.md#1" target="_blank">金剑：阶级斗争是民族毁灭的动力</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/27/n8533521.md#1" target="_blank">勤修炼 英文老师丢了药罐子</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896689.md#1">在工地发生事故濒死 韩国男子出现特异功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13892027.md#1">他的才思从哪里来？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896520.md#1">【时事人物】风投神话破灭 孙正义退场之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896482.md#1">【未解之谜】憋了很久 一定要说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897337.md#1">【百年真相】赔了恋人又折命 共谍关露的悲剧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13899643.md#1">【热点互动】清零后大解封 经济退回入世前？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898836.md#1">【新闻看点】多少高官党员离世？民众自发统计</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899309.md#1">【新闻大家谈】过年“报复性”返乡 恐掀染疫潮</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898179.md#1">传北京密云建简易焚烧炉 官方证实在征用炉子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898246.md#1">人为压低染疫死亡率？北京书记一句话引来质疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898370.md#1">河南等多地民众燃放烟花被抓 有人掀翻警车</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898127.md#1">何炅主持跨年晚会洒泪舞台 疑因其父染疫去世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898840.md#1">范冰冰晒无名指戴巨型红宝石 被传好事近了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898374.md#1">送别恩师林秋离 林俊杰现身告别式致哀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898157.md#1">周星驰新年贴《食神》剧照 透露复出演戏意愿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898066.md#1">加拿大新唐人将推出奇幻电影《再次成为神》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896472.md#1">增强免疫力的6种有效方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895971.md#1">【车评】比电动车更实用 2022 Lexus NX 450h+ F Sport Handling AWD</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896469.md#1">癌症术后15年未复发 日本医生分享5秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898889.md#1">预防“沉默杀手” 留意肾脏病 5大症状</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894447.md#1">如何降低他汀类药物副作用</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964333.md#1">【中国禁闻】中国地方银行现危机 多行拒赎二级债</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/5/n13900016.htm">中共若侵台 前北约秘书长：北约应军援台湾</a></p><hr>
