--- a/gb/21/11/27/n13402028.md
+++ b/gb/21/11/27/n13402028.md
@@ -28,31 +28,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/18/n11196004.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(1)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/24/n10509014.md#1" target="_blank">驱除共产 回归传统 华府万人传递希望</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10784939.md#1" target="_blank">共产暴政录：“抗美援朝”真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/11/n4547562.md#1" target="_blank">我们告诉未来：封锁与反封锁</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950568.md#1">明末改朝换代关帝君显灵  天命不可违人算不如天算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951783.md#1">挣脱监控 新西兰中领馆出逃员工心路历程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952758.md#1">【未解之谜】别找了 外星人早来地球了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949868.md#1">【古道人生】古代一些被权贵家庭看不起的穷女婿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950328.md#1">【未解之谜】消失的《小人国》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954366.md#1">【中国禁闻】中国现同时感染两种毒株患者 专家解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/21/n13955059.md#1">【晚间新闻】习近平出国访问 中共军队小动作不断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954598.md#1">【舞蹈】中国舞动作快览：翻身</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953298.md#1">中国女篮国手被曝当小三 多次发照片诱惑领队</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952121.md#1">Costco退货政策最慷慨 但11类商品不能退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952900.md#1">F-35战机有三大优势 歼-20和苏-57望尘莫及</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953323.md#1">大陆配音圈大地震 姜广涛等4人被爆涉刑事犯罪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953953.md#1">御用配音员姜广涛被捕 刘恺威近十年作品恐下架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953394.md#1">帮坤达庆生 被喊艺界扶龙王 柯佳嬿幽默回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953476.md#1">草蜢隔13年登台开唱 张小燕与2位歌王都到场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954264.md#1">李多海与SE7EN官宣结婚 5月举办婚礼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950837.md#1">年龄大听力一定差？6类护耳食物要多吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953544.md#1">父母如何让小孩听从指令？ 专家分享三招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944686.md#1">洗蔬果简单又好用的方法 让你不再吃进农药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944006.md#1">穿出职场业务力 改变穿搭好运随之而来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952244.md#1">组图：台湾最美最长的黄金、翠绿双隧道</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964333.md#1">【中国禁闻】中国地方银行现危机 多行拒赎二级债</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/27/n13402028.htm">拼多多第三季营收远低于预期 股价暴跌</a></p><hr>
